# fpl_draft

./: .gitignore  .pre-commit-config.yaml  fpl_streamlit.py  ingestion.py  main.py  pyproject.toml  streamlit.py
data/raw/: gameweek.parquet
draft_run/: main.py
draft_run/a/: land_data.py
draft_run/b/: bootstrap.py  details.py  game.py  trades.py  transactions.py
draft_run/curated/: other_teams.py  transfers_in.py  transfers_out.py
draft_run/land_to_raw/: bootstrap.py  details.py  game.py  gameweek_live.py  raw_data.py  selections.py  trades.py  transactions.py
draft_run/landing/: land_data.py
draft_run/raw/: bootstrap.py  details.py  gameweek_live.py  trades.py  transactions.py
draft_run/raw_to_trusted/: league.py  live_matches.py  live_scores.py  live_selections.py  live_stats.py  players.py  scoring.py  teams_and_fixtures.py  trusted_data.py
draft_run/source_to_land/: land_data.py
draft_run/trusted/: league.py  players.py  scoring.py  teams_and_fixtures.py
landing/: bootstrap-static.json  details.json  game_week.json  league_transactions.json  trades.json
pages/: 1_league.py  1_my_team.py  1_team_history.py  1_test.py  2_fixtures.py  2_my_next_opponent.py  3_waivers.py
src/: connection.py  json_formatting.py
src/ingestion/: connection.py  download_raw.py  landing.py  raw.py  trusted.py
src/process/: cleaning.py  schema_independent.py
src/utils/: env.py  input_output.py
